# cmux-lx

./: .gitignore  .gitmodules  Cargo.toml  NOTICE  README.md  build.rs  ghostty.h
.cargo/: config.toml
daemon/remote/cmd/cmuxd-remote/: main.go
packaging/: CLAUDE.md
packaging/completions/: _cmux  cmux.bash  cmux.fish
packaging/desktop/: com.cmux_lx.terminal.desktop  com.cmux_lx.terminal.metainfo.xml
packaging/man/: cmux.1
packaging/scripts/: build-deb.sh  cmux-app-wrapper.sh  detect-deps.sh  generate-completions.sh  generate-icons.sh  validate-all.sh  validate-deb.sh
resources/: cmux.desktop
scripts/: build-appimage.sh  cmux-cli  install-chromium.sh  install-cmuxd-remote.sh  setup-linux.sh
src/: app_state.rs  browser.rs  browser_settings.rs  config.rs  header_bar.rs  main.rs  menus.rs  session.rs  shortcuts.rs  sidebar.rs  split_engine.rs  ssh_dialog.rs  ssh_hosts.rs  workspace.rs
src/cli/: discovery.rs  format.rs  mod.rs  socket_client.rs
src/ghostty/: callbacks.rs  ffi.rs  input.rs  mod.rs  surface.rs
src/socket/: auth.rs  commands.rs  handlers.rs  mod.rs
src/ssh/: bridge.rs  deploy.rs  mod.rs  tunnel.rs
tests_v2/: cmux.py
