[workspace]
members = [".", "agent-browser/cli"]

[package]
name = "cmux-linux"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cmux-app"
path = "src/main.rs"

[[bin]]
name = "cmux"
path = "src/bin/cmux.rs"

[dependencies]
gtk4 = { version = "0.10.3", features = ["v4_12", "v4_14"] }
tokio = { version = "1", features = ["full"] }
glib = "0.21.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
libc = "0.2"
base64 = "0.22.1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive", "color", "env"] }
clap_complete = "4.6"
clap_mangen = "0.3"

[[bin]]
name = "cmux-generate"
path = "src/bin/generate.rs"

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.57"
